--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NODE_ENV=development
 MONGODB_URI=mongodb://localhost:27017/m77ag
 
 # JWT Configuration
-JWT_SECRET=your_jwt_secret_key_here
+JWT_SECRET=300Winmag!!
 JWT_EXPIRATION=7d
 
 # Admin Default Credentials
