--- a/.env
+++ b/.env
@@ -1,28 +1,16 @@
+$envContent = @"
 # Server Configuration
-PORT=3000
+PORT=5000
 NODE_ENV=development
 
 # MongoDB Connection
-MONGODB_URI=mongodb://localhost:27017/m77ag
+MONGODB_URI=mongodb+srv://m77ag:300Winmag!@cluster0.mongodb.net/m77ag?retryWrites=true&w=majority
 
-# JWT Configuration
-<<<<<<< HEAD
-JWT_SECRET=300Winmag!
-=======
-JWT_SECRET=300Winmag!!
->>>>>>> 10490b0f01f649cdb35d46571afe1dde14507755
-JWT_EXPIRATION=7d
+# JWT Secret
+JWT_SECRET=m77ag_secure_jwt_secret_2025
 
-# Admin Default Credentials
-ADMIN_EMAIL=admin@m77ag.com
-ADMIN_PASSWORD=M77admin2024!
+# App Settings
+APP_NAME=M77 AG
+"@
 
-# Render.com Configuration
-# Uncomment these in production
-# PORT=10000
-# NODE_ENV=production
-<<<<<<< HEAD
-# MONGODB_URI=your_production_mongodb_uri
-=======
-# MONGODB_URI=your_production_mongodb_uri
->>>>>>> 10490b0f01f649cdb35d46571afe1dde14507755
+Set-Content -Path ".env" -Value $envContent
